add output multiple channels

--- a/notebook/align_between_rounds.ipynb
+++ b/notebook/align_between_rounds.ipynb
@@ -19,7 +19,7 @@
     "D0 = '/n/boslfs02/LABS/lichtman_lab/donglai/ExM/Chi/'\n",
     "f_vol_fix = D0 + '20211130_larva1_barcode3.nd2'\n",
     "f_vol_move = D0 + '20211130_larva1_barcode5.nd2'\n",
-    "f_vol_out = D0 + '20211130_larva1_barcode5_warped.h5'\n",
+    "f_vol_out = D0 + '20211130_larva1_barcode5_warped'\n",
     "\n",
     "# ['rigid']: rigid transformation (rotation + translation)\n",
     "# ['affine']: affine transformation (rigid + shear)\n",
@@ -48,8 +48,9 @@
     "import numpy as np\n",
     "import SimpleITK as sitk\n",
     "from nd2reader import ND2Reader\n",
+    "import h5py\n",
     "\n",
-    "def nd2ToVol(filename, channel_name='405', ratio=1):\n",
+    "def nd2ToVol(filename, channel_name='405 SD', ratio=1):\n",
     "    vol = ND2Reader(filename)\n",
     "    channel_names = vol.metadata['channels']\n",
     "    print('Availabel channels:', channel_names)\n",
@@ -83,13 +84,13 @@
     "    elastixImageFilter.SetParameterMap(parameterMapVector)\n",
     "\n",
     "# 2. load volume\n",
-    "img_np = nd2ToVol(f_vol_fix, channel_name)\n",
+    "img_np = nd2ToVol(f_vol_fix, m_channel_name)\n",
     "print('vol-fix shape:', img_np.shape)\n",
     "img = sitk.GetImageFromArray(img_np)\n",
     "img.SetSpacing(m_resolution)\n",
     "elastixImageFilter.SetFixedImage(img)\n",
     "\n",
-    "img_np = nd2ToVol(f_vol_move, channel_name)\n",
+    "img_np = nd2ToVol(f_vol_move, m_channel_name)\n",
     "print('vol-move shape:', img_np.shape)\n",
     "img = sitk.GetImageFromArray(img_np)\n",
     "img.SetSpacing(m_resolution)\n",
@@ -99,9 +100,40 @@
     "elastixImageFilter.Execute()\n",
     "\n",
     "# 4. save output\n",
-    "# image type: float -> np.uint16\n",
-    "sitk.WriteImage(sitk.Cast(elastixImageFilter.GetResultImage(), sitk.sitkUInt16), f_vol_out)\n",
-    "sitk.WriteParameterFile(elastixImageFilter.GetTransformParameterMap()[0], f_vol_out[:f_vol_out.rfind('.')] + '.tfm')"
+    "# save transformation param\n",
+    "param_map = elastixImageFilter.GetTransformParameterMap()[0]\n",
+    "sitk.WriteParameterFile(param_map, f_vol_out[:f_vol_out.rfind('.')] + '.txt')\n",
+    "\n",
+    "# save warped channels\n",
+    "channel_names = ND2Reader(f_vol_move).metadata['channels']\n",
+    "\n",
+    "if len(channel_names) == 1:\n",
+    "    # directly save\n",
+    "    sitk.WriteImage(sitk.Cast(elastixImageFilter.GetResultImage(), sitk.sitkUInt16), f_vol_out)\n",
+    "else:\n",
+    "    fid = h5py.File(f_vol_out, 'w')\n",
+    "    ds = fid.create_dataset('spacing', [3], compression=\"gzip\", dtype=int)\n",
+    "    ds[:] = np.array(m_resolution).astype(int)\n",
+    "    # image type: float -> np.uint16\n",
+    "    img_out = sitk.GetArrayFromImage(elastixImageFilter.GetResultImage()).astype(np.uint16)\n",
+    "    ds = fid.create_dataset([x for x in channel_names if m_channel_name in x][0], img_out.shape, compression=\"gzip\", dtype=img_out.dtype)\n",
+    "    ds[:] = img_out\n",
+    "\n",
+    "    # warp other channels\n",
+    "    transformixImageFilter = sitk.TransformixImageFilter()\n",
+    "    transformixImageFilter.SetTransformParameterMap(param_map)\n",
+    "    for channel_name in channel_names:\n",
+    "        if m_channel_name not in channel_name:\n",
+    "            img_np = nd2ToVol(f_vol_move, channel_name)\n",
+    "            print('vol 2:', channel_name, img_np.shape)\n",
+    "            img = sitk.GetImageFromArray(img_np)\n",
+    "            img.SetSpacing(m_resolution)\n",
+    "            transformixImageFilter.SetMovingImage(img)\n",
+    "            transformixImageFilter.Execute()\n",
+    "            img_out = sitk.GetArrayFromImage(transformixImageFilter.GetResultImage()).astype(np.uint16)\n",
+    "            ds = fid.create_dataset(channel_name, img_out.shape, compression=\"gzip\", dtype=img_out.dtype)\n",
+    "            ds[:] = img_out\n",
+    "    fid.close()"
    ]
   }
  ],
