--- a/notebook/align_between_rounds.ipynb
+++ b/notebook/align_between_rounds.ipynb
@@ -26,7 +26,7 @@
     "# ['affine', 'bspline']: non-rigid transformation (affine + b-spline)\n",
     "m_transform_type = ['affine'] \n",
     "m_channel_name = '405' # okay to be partial name\n",
-    "m_resolution = [4,1.625,1.625] # um"
+    "m_resolution = [1.625,1.625,4] # um: xyz. the image volume is in zyx-order"
    ]
   },
   {
@@ -46,11 +46,11 @@
    "source": [
     "# library and utility functions\n",
     "import numpy as np\n",
-    "import SimpleITK as sitk\n",
     "from nd2reader import ND2Reader\n",
     "import h5py\n",
     "\n",
     "def nd2ToVol(filename, channel_name='405 SD', ratio=1):\n",
+    "    # volume in zyx order\n",
     "    vol = ND2Reader(filename)\n",
     "    channel_names = vol.metadata['channels']\n",
     "    print('Availabel channels:', channel_names)\n",
@@ -71,12 +71,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import SimpleITK as sitk\n",
+    "\n",
     "# main function to run\n",
     "elastixImageFilter = sitk.ElastixImageFilter()\n",
     "\n",
     "# 1. set transformation parameters\n",
     "if len(m_transform_type) == 1:\n",
-    "    elastixImageFilter.SetParameterMap(sitk.GetDefaultParameterMap(m_transform_type[0]))\n",
+    "    param_map = sitk.GetDefaultParameterMap(m_transform_type[0])\n",
+    "    param_map['NumberOfSamplesForExactGradient'] = ['100000']\n",
+    "    param_map['MaximumNumberOfIterations'] = ['10000']\n",
+    "    param_map['MaximumNumberOfSamplingAttempts'] = ['15']\n",
+    "    param_map['FinalBSplineInterpolationOrder'] = ['1']\n",
+    "    elastixImageFilter.SetParameterMap(param_map)\n",
     "else:\n",
     "    parameterMapVector = sitk.VectorOfParameterMap()\n",
     "    for trans in m_transform_type:\n",
@@ -134,6 +141,45 @@
     "            ds = fid.create_dataset(channel_name, img_out.shape, compression=\"gzip\", dtype=img_out.dtype)\n",
     "            ds[:] = img_out\n",
     "    fid.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12b86be8-7f27-47cc-9f82-5fb9827e131c",
+   "metadata": {},
+   "source": [
+    "# TO VISUALIZE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05563514-080c-41ea-b91f-12c7f9a97f99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# may need to load a different kernel\n",
+    "# if use a new kernel, need to re-run previous code cells except the alignment\n",
+    "\n",
+    "# library and utility functions\n",
+    "import napari\n",
+    "import numpy as np\n",
+    "from nd2reader import ND2Reader\n",
+    "import h5py\n",
+    "\n",
+    "viewer = napari.Viewer()\n",
+    "\n",
+    "def display_vol(f_vol_fix, f_vol_out, channel_name):\n",
+    "    napari.view_image(nd2ToVol(f_vol_fix, channel_name), \\\n",
+    "                      name = 'fixed-'+channel_name, \\\n",
+    "                      scale = m_resolution[::-1])\n",
+    "    napari.view_image(np.array(h5py.File(f_vol_fix, 'r')[channel_name]), \\\n",
+    "                      name = 'warped-'+channel_name, \\\n",
+    "                      scale = m_resolution[::-1])\n",
+    "\n",
+    "\n",
+    "channel_names = ND2Reader(f_vol_fix).metadata['channels']\n",
+    "display_vol(f_vol_fix, f_vol_out, channel_names[0])"
    ]
   }
  ],
