--- a/notebook/align_between_rounds.ipynb
+++ b/notebook/align_between_rounds.ipynb
@@ -19,7 +19,7 @@
     "D0 = '/n/boslfs02/LABS/lichtman_lab/donglai/ExM/Chi/'\n",
     "f_vol_fix = D0 + '20211130_larva1_barcode3.nd2'\n",
     "f_vol_move = D0 + '20211130_larva1_barcode5.nd2'\n",
-    "f_vol_out = D0 + '20211130_larva1_barcode5_warped'\n",
+    "f_vol_out = D0 + '20211130_larva1_barcode5_warped.h5'\n",
     "\n",
     "# ['rigid']: rigid transformation (rotation + translation)\n",
     "# ['affine']: affine transformation (rigid + shear)\n",
@@ -170,14 +170,18 @@
     "viewer = napari.Viewer()\n",
     "\n",
     "def display_vol(f_vol_fix, f_vol_out, channel_name):\n",
-    "    napari.view_image(nd2ToVol(f_vol_fix, channel_name), \\\n",
+    "    viewer.add_image(nd2ToVol(f_vol_fix, channel_name), \\\n",
     "                      name = 'fixed-'+channel_name, \\\n",
     "                      scale = m_resolution[::-1])\n",
-    "    napari.view_image(np.array(h5py.File(f_vol_fix, 'r')[channel_name]), \\\n",
+    "    viewer.add_image(np.array(h5py.File(f_vol_out, 'r')[channel_name]), \\\n",
     "                      name = 'warped-'+channel_name, \\\n",
     "                      scale = m_resolution[::-1])\n",
     "\n",
     "\n",
+    "\n",
+    "# napari visualization tips:\n",
+    "# for the two volumes, set colormaps to \"red\" and \"green\" respectively\n",
+    "# A good alignment result will lead to a yellow-ish image where green and red matches\n",
     "channel_names = ND2Reader(f_vol_fix).metadata['channels']\n",
     "display_vol(f_vol_fix, f_vol_out, channel_names[0])"
    ]
