--- a/notebook/align_between_rounds.ipynb
+++ b/notebook/align_between_rounds.ipynb
@@ -180,8 +180,9 @@
     "\n",
     "\n",
     "# napari visualization tips:\n",
-    "# for the two volumes, set colormaps to \"red\" and \"green\" respectively\n",
+    "# top-left: for the two volumes, set colormaps to \"red\" and \"green\" respectively\n",
     "# A good alignment result will lead to a yellow-ish image where green and red matches\n",
+    "# bottom-left: select \"Toggle ndisplay\" for 3D viewer\n",
     "channel_names = ND2Reader(f_vol_fix).metadata['channels']\n",
     "display_vol(f_vol_fix, f_vol_out, channel_names[0])"
    ]
