add ratio option for volume display

--- a/notebook/align_between_rounds.ipynb
+++ b/notebook/align_between_rounds.ipynb
@@ -169,11 +169,15 @@
     "\n",
     "viewer = napari.Viewer()\n",
     "\n",
-    "def display_vol(f_vol_fix, f_vol_out, channel_name):\n",
-    "    viewer.add_image(nd2ToVol(f_vol_fix, channel_name), \\\n",
+    "def display_vol(f_vol_fix, f_vol_out, channel_name, ratio = [1,1,1]):\n",
+    "    # ratio: display downsampled volume\n",
+    "    img_fix = nd2ToVol(f_vol_fix, channel_name)\n",
+    "    viewer.add_image(img_fix[::ratio[0], ::ratio[1], ::ratio[2]], \\\n",
     "                      name = 'fixed-'+channel_name, \\\n",
     "                      scale = m_resolution[::-1])\n",
-    "    viewer.add_image(np.array(h5py.File(f_vol_out, 'r')[channel_name]), \\\n",
+    "\n",
+    "    img_warp = np.array(h5py.File(f_vol_out, 'r')[channel_name])\n",
+    "    viewer.add_image(img_warp[::ratio[0], ::ratio[1], ::ratio[2]], \\\n",
     "                      name = 'warped-'+channel_name, \\\n",
     "                      scale = m_resolution[::-1])\n",
     "\n",
