fixed dynamic library linking issue

--- a/docker/elastix-test.ipynb
+++ b/docker/elastix-test.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2fed7df",
+   "id": "5159fda4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,21 +30,21 @@
     "        out[z] = vol.get_frame_2D(c=channel_id, t=0, z=z, x=0, y=0, v=0)[::ratio, ::ratio]\n",
     "    return out\n",
     "\n",
-    "De = './elastix-4.9.0-linux/'"
+    "De = './src/elastix-4.9.0-linux/'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac1ba875",
+   "id": "e3f6e598",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nd2s = ['/src/src/20211130_larva1_barcode3.nd2', '/src/src/20211130_larva1_barcode5.nd2']\n",
+    "nd2s = ['/src/20211130_larva1_barcode3.nd2', '/src/20211130_larva1_barcode5.nd2']\n",
     "nrrds = ['/src/src/20211130_larva1_barcode3.nrrd', '/src/src/20211130_larva1_barcode5.nrrd']\n",
-    "output = '/src/src/20211130_larva1_barcode5/aligned_/'\n",
+    "output = '/src/src/021-11-29_WORMseq6/WORMSeq6_S3_barcode5/20211130_larva/20211130_larva1_barcode5_aligned/'\n",
     "\n",
-    "print('channels:', ND2Reader(nd2s[0]).metadata['channels'])\n",
+    "#print('channels:', ND2Reader(nd2s[0]).metadata['channels'])\n",
     "\n",
     "for nid in range(2):\n",
     "    if not os.path.exists(nrrds[nid]):\n",
@@ -53,7 +53,7 @@
     "\n",
     "cmd = '! LD_LIBRARY_PATH=$LD_LIBRARY_PATH:%s/lib; %s/bin/elastix -f %s -m %s -out %s -p Parameters.txt' \\\n",
     "          % (De, De, nrrds[0], nrrds[1], output)\n",
-    "os.system('mkdir %s' %output)\n",
+    "os.system('mkdir -p %s' %output)\n",
     "print('copy the command below for execution')\n",
     "print('---------------')\n",
     "print(cmd)\n",
@@ -63,17 +63,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e9f99bf",
+   "id": "fe8a3a69",
    "metadata": {},
    "outputs": [],
    "source": [
-    "! LD_LIBRARY_PATH=$LD_LIBRARY_PATH:./elastix-4.9.0-linux/lib; ./elastix-4.9.0-linux/bin/elastix -f 20211130_larva1_barcode3.nrrd -m 20211130_larva1_barcode5.nrrd -out /content/drive/MyDrive/2021-11-29_WORMseq6/WORMSeq6_S3_barcode5/20211130_larva/20211130_larva1_barcode5_aligned/ -p Parameters.txt"
+    "# set dynamic library path\n",
+    "%env LD_LIBRARY_PATH=/src/elastix-4.9.0-linux/lib:$LD_LIBRARY_PATH"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4f097eb",
+   "id": "3c2bb5bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sanity check\n",
+    "%env"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "240a5072",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd /src/elastix-4.9.0-linux/bin/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff541e6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! ./elastix -f /src/src/20211130_larva1_barcode3.nrrd -m /src/src/20211130_larva1_barcode5.nrrd -out /src/src/021-11-29_WORMseq6/WORMSeq6_S3_barcode5/20211130_larva/20211130_larva1_barcode5_aligned/ -p /src/Parameters.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb68b684",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +115,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6f9bc53",
+   "id": "67692a1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!./elastix --help"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a229445",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97deb436",
+   "id": "facf38c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c89207b1",
+   "id": "afab9ffa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d65beec",
+   "id": "ebc41e7e",
    "metadata": {},
    "outputs": [],
    "source": [
