--- a/notebook/align_tile-stitched.ipynb
+++ b/notebook/align_tile-stitched.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "e8a65d20-1a14-4eeb-acd8-d31d66999429",
    "metadata": {},
    "outputs": [],
@@ -48,6 +48,7 @@
     "# mip0: need to be h5\n",
     "#fn_stitched_mip0 = Ds + 'RES(9854x5950x548)/000000/000000_000000/000000_000000_000040.tif'\n",
     "fn_stitched_mip0 = Do + 'barcode3_hr.h5'\n",
+    "fn_stitched_mip2 = Do + 'barcode3_mip2.h5'\n",
     "fn_stitched_lr = Ds + 'RES(1231x743x68)/000000/000000_000000/000000_000000_000040.tif'\n",
     "\n",
     "## input tiles\n",
@@ -73,7 +74,7 @@
     "Do = Do + '/'\n",
     "mkdir(Do)\n",
     "mkdir(Do + fn_name)\n",
-    "fn_out = Do + fn_name + '/'+ transform_type '_%d-'+ str()\n",
+    "fn_out = Do + fn_name + '/'+ transform_type + '_%d-%d'\n",
     "\n",
     "# save intermediate low-res results\n",
     "if do_debug:\n",
@@ -103,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "aff229e3-7576-48f9-a382-eeca5688ad17",
    "metadata": {},
    "outputs": [],
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "a638dad4-f536-487c-ad51-3d442fdc78b9",
    "metadata": {},
    "outputs": [],
@@ -159,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "2cfdfbcf-e849-4e87-9e86-f37f9f501e87",
    "metadata": {},
    "outputs": [
@@ -195,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "6b6a30ea-2931-4e93-a42c-e5279ca11151",
    "metadata": {},
    "outputs": [
@@ -220,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "ee45ff37-7c34-4215-a0f0-dcc73c298cd0",
    "metadata": {},
    "outputs": [],
@@ -241,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "959ee57d-29ea-4249-b668-897f782a3059",
    "metadata": {
     "tags": []
@@ -266,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "0d694bb3-1fdc-4175-86c8-530f35cfafef",
    "metadata": {},
    "outputs": [],
@@ -282,21 +283,51 @@
    "id": "1d169149-bdb3-4796-adf0-91dc523415c6",
    "metadata": {},
    "source": [
-    "## Step 2. High-res tile-to-volume alignment"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b248af13-601a-4764-8680-e5ba76f278f5",
-   "metadata": {},
-   "source": [
-    "### 2.1 Compute registration"
+    "## [Optional: sanity check] Step 2. Low-res tile-to-volume alignment"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "212c1db4-dc39-4ca4-865e-ec48d085aaa2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "do_check = False\n",
+    "\n",
+    "if do_check:\n",
+    "    ### 2.1 Compute registration\n",
+    "    ratio_high = [8,8,8]; tmp_h5 = stitched_lr_h5\n",
+    "    #stitched_mip2_h5 = h5py.File(fn_stitched_mip2, 'r')['main']\n",
+    "    #ratio_high = [4,4,4]; tmp_h5 = stitched_mip2_h5\n",
+    "\n",
+    "    aligner_t2s = sitkTile2Volume(tiles_data, tmp_h5, aligner, ratio_high)\n",
+    "    aligner_t2s.setInitialTransform(transform_lr)\n",
+    "    aligner_t2s.updateOutputSize(pad_ratio = 3)\n",
+    "\n",
+    "\n",
+    "    for tile_id in range(tiles_data.tiles_num):    \n",
+    "        if not os.path.exists(fn_out%(ratio_high[0], tile_id) + '.h5'):\n",
+    "            print(tile_id)\n",
+    "            aligner_t2s.alignTiles(tile_id, fn_out)\n",
+    "\n",
+    "\n",
+    "    ### 2.2 Render result        \n",
+    "    out = aligner_t2s.stitchTiles(fn_out, (50,512,512))        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4044d812-45d4-4ce4-8a88-3ffae2d96301",
+   "metadata": {},
+   "source": [
+    "## [Final result] Step 3. High-res tile-to-volume alignment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "9a5fb41b-9f8d-40a9-ac33-bb7cb9f8df16",
    "metadata": {},
    "outputs": [
     {
@@ -306,53 +337,54 @@
       "volume size:  [ 482 9820 5969] (downsampled): [ 483 9821 5970]\n",
       "0\n"
      ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "not enough arguments for format string",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_246516/1530437877.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexists\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfn_out\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mratio_high\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtile_id\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'.h5'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtile_id\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m         \u001b[0maligner_t2s\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0malignTiles\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtile_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfn_out\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maligner_t2s\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstitchTiles\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfn_out\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m50\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m512\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m512\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/lib/ExM-Toolbox/exm/align/sitk_tile2volume.py\u001b[0m in \u001b[0;36malignTiles\u001b[0;34m(self, tile_id, fn_out)\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0malignTiles\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtile_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfn_out\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 45\u001b[0;31m         \u001b[0mfn_out\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfn_out\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mratio_output\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtile_id\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     46\u001b[0m         \u001b[0;31m# get tile data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m         \u001b[0mtile\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtiles_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetTileVolume\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtile_id\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: not enough arguments for format string"
+     ]
     }
    ],
    "source": [
     "ratio_high = [1,1,1]; tmp_h5 = stitched_hr_h5\n",
     "\n",
-    "#ratio_high = [8,8,8]; tmp_h5 = stitched_lr_h5\n",
-    "\n",
-    "aligner_t2s = sitkTile2Volume(tiles_data, tmp_h5, aligner, transform_lr, ratio_high)\n",
+    "aligner_t2s = sitkTile2Volume(tiles_data, tmp_h5, aligner, ratio_high)\n",
+    "aligner_t2s.setInitialTransform(transform_lr)\n",
     "aligner_t2s.updateOutputSize(pad_ratio = 3)\n",
     "\n",
     "for tile_id in range(tiles_data.tiles_num):    \n",
-    "    if not os.path.exists(fn_out%tile_id + '.h5'):\n",
+    "    if not os.path.exists(fn_out%(ratio_high[0], tile_id) + '.h5'):\n",
     "        print(tile_id)\n",
-    "        aligner_t2s.alignTiles(tile_id, fn_out)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c9a4ba62-111f-46b5-8928-9ca126547a32",
-   "metadata": {},
-   "source": [
-    "### 2.2 Render result"
+    "        aligner_t2s.alignTiles(tile_id, fn_out)\n",
+    "\n",
+    "out = aligner_t2s.stitchTiles(fn_out, (50,512,512))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "bf76e429-e8a0-4f85-b7c1-9ac574c7745d",
+   "execution_count": 14,
+   "id": "f31924d9-e635-479d-a0b2-b41d071af19c",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Load tile 0:  pos= [ 21   0 225]\n",
-      "Load tile 1:  pos= [ 14 216 225]\n",
-      "Load tile 2:  pos= [ 12 216   0]\n",
-      "Load tile 3:  pos= [  5 459   0]\n",
-      "Load tile 4:  pos= [  7 459 224]\n",
-      "Load tile 6:  pos= [  1 702 466]\n",
-      "Load tile 7:  pos= [  0 702 223]\n",
-      "Load tile 8:  pos= [  0 945 467]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'/home/donglai/align/db/wormseq7//barcode5/rigid_%d-%d'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "out = aligner_t2s.stitchTiles(fn_out, (50,512,512))"
+    "fn_out"
    ]
   }
  ],
