max for stitch rendering

--- a/notebook/align_tile-stitched.ipynb
+++ b/notebook/align_tile-stitched.ipynb
@@ -29,12 +29,12 @@
     "import exm\n",
     "import matplotlib.pyplot as plt\n",
     "import tifffile\n",
+    "import multiprocessing as mp\n",
     "from exm.io import readXlsx, readNd2,tiles, readH5, writeH5, mkdir, tilesData,imAdjust\n",
     "from exm.align import sitkTile, sitkTile2Volume\n",
     "\n",
     "\n",
     "############# To change #############\n",
-    "\n",
     "## output files\n",
     "Do = '/home/donglai/align/db/wormseq7/'\n",
     "\n",
@@ -283,7 +283,7 @@
    "id": "1d169149-bdb3-4796-adf0-91dc523415c6",
    "metadata": {},
    "source": [
-    "## [Optional: sanity check] Step 2. Low-res tile-to-volume alignment"
+    "## [Optional] Step 2. Low-res tile-to-volume alignment"
    ]
   },
   {
@@ -293,14 +293,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "do_check = False\n",
+    "do_sanity_check = False\n",
     "\n",
-    "if do_check:\n",
+    "if do_sanity_check:\n",
     "    ### 2.1 Compute registration\n",
     "    ratio_high = [8,8,8]; tmp_h5 = stitched_lr_h5\n",
-    "    #stitched_mip2_h5 = h5py.File(fn_stitched_mip2, 'r')['main']\n",
-    "    #ratio_high = [4,4,4]; tmp_h5 = stitched_mip2_h5\n",
-    "\n",
     "    aligner_t2s = sitkTile2Volume(tiles_data, tmp_h5, aligner, ratio_high)\n",
     "    aligner_t2s.setInitialTransform(transform_lr)\n",
     "    aligner_t2s.updateOutputSize(pad_ratio = 3)\n",
@@ -336,6 +333,8 @@
      "text": [
       "volume size:  [ 482 9820 5969] (downsampled): [ 483 9821 5970]\n",
       "0\n",
+      "[1446 6144 6144]\n",
+      "1\n",
       "[1446 6144 6144]\n"
      ]
     }
@@ -347,12 +346,13 @@
     "aligner_t2s.setInitialTransform(transform_lr)\n",
     "aligner_t2s.updateOutputSize(pad_ratio = 3)\n",
     "\n",
-    "for tile_id in range(tiles_data.tiles_num):    \n",
+    "def worker(tile_id):\n",
     "    if not os.path.exists(fn_out%(ratio_high[0], tile_id) + '.h5'):\n",
-    "        print(tile_id)\n",
+    "        print('working on tile', tile_id)\n",
     "        aligner_t2s.alignTiles(tile_id, fn_out)\n",
     "\n",
-    "out = aligner_t2s.stitchTiles(fn_out, (50,512,512))"
+    "pool = mp.Pool(min(tiles_data.tiles_num, mp.cpu_count()))\n",
+    "pool.map(worker, range(tiles_data.tiles_num))"
    ]
   },
   {
@@ -373,7 +373,7 @@
     }
    ],
    "source": [
-    "fn_out"
+    "out = aligner_t2s.stitchTiles(fn_out, (50,512,512))"
    ]
   }
  ],
