comment out parallel bug

--- a/notebook/align_tile-stitched.ipynb
+++ b/notebook/align_tile-stitched.ipynb
@@ -170,7 +170,7 @@
      "text": [
       "exist 3 multipoint loops with length [4 4 9]\n",
       "['405 SD']\n",
-      "volume size:  [ 482 9820 5969] (downsampled): [  61 1228  747]\n"
+      "original size:  [ 482 9820 5969] (downsampled): [  61 1228  747]\n"
      ]
     }
    ],
@@ -331,11 +331,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "volume size:  [ 482 9820 5969] (downsampled): [ 483 9821 5970]\n",
-      "0\n",
-      "[1446 6144 6144]\n",
-      "1\n",
-      "[1446 6144 6144]\n"
+      "original size:  [ 482 9820 5969] (downsampled): [ 483 9821 5970]\n",
+      "1\n"
      ]
     }
    ],
@@ -346,32 +343,34 @@
     "aligner_t2s.setInitialTransform(transform_lr)\n",
     "aligner_t2s.updateOutputSize(pad_ratio = 3)\n",
     "\n",
+    "\n",
+    "\"\"\"\"\"\"\n",
+    "# naive sequential approach\n",
+    "for tile_id in range(tiles_data.tiles_num):    \n",
+    "    if not os.path.exists(fn_out%(ratio_high[0], tile_id) + '.h5'):\n",
+    "        print(tile_id)\n",
+    "        aligner_t2s.alignTiles(tile_id, fn_out)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
     "def worker(tile_id):\n",
     "    if not os.path.exists(fn_out%(ratio_high[0], tile_id) + '.h5'):\n",
     "        print('working on tile', tile_id)\n",
     "        aligner_t2s.alignTiles(tile_id, fn_out)\n",
     "\n",
     "pool = mp.Pool(min(tiles_data.tiles_num, mp.cpu_count()))\n",
-    "pool.map(worker, range(tiles_data.tiles_num))"
+    "pool.map(worker, range(tiles_data.tiles_num))\n",
+    "\n",
+    "\"\"\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "f31924d9-e635-479d-a0b2-b41d071af19c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/donglai/align/db/wormseq7//barcode5/rigid_%d-%d'"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "out = aligner_t2s.stitchTiles(fn_out, (50,512,512))"
    ]
