update registration rendering

--- a/notebook/align_tile-stitched.ipynb
+++ b/notebook/align_tile-stitched.ipynb
@@ -291,9 +291,26 @@
    "execution_count": 9,
    "id": "212c1db4-dc39-4ca4-865e-ec48d085aaa2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original size:  [ 482 9820 5969] (downsampled): [  61 1228  747]\n",
+      "Load tile 0:  pos= [ 21   0 226]\n",
+      "Load tile 1:  pos= [ 14 217 226]\n",
+      "Load tile 2:  pos= [ 12 217   0]\n",
+      "Load tile 3:  pos= [  5 459   0]\n",
+      "Load tile 4:  pos= [  7 459 225]\n",
+      "Load tile 6:  pos= [  1 702 466]\n",
+      "Load tile 7:  pos= [  0 702 224]\n",
+      "Load tile 8:  pos= [  0 945 467]\n"
+     ]
+    }
+   ],
    "source": [
     "do_sanity_check = False\n",
+    "do_sanity_check = True\n",
     "\n",
     "if do_sanity_check:\n",
     "    ### 2.1 Compute registration\n",
@@ -304,13 +321,13 @@
     "\n",
     "\n",
     "    for tile_id in range(tiles_data.tiles_num):    \n",
-    "        if not os.path.exists(fn_out%(ratio_high[0], tile_id) + '.h5'):\n",
-    "            print(tile_id)\n",
+    "        if not os.path.exists(fn_out%(ratio_high[0], tile_id) + '.h5') and not os.path.exists(fn_out%(ratio_high[0], tile_id) + '_err.h5'):\n",
+    "            print('process tile:', tile_id)\n",
     "            aligner_t2s.alignTiles(tile_id, fn_out)\n",
     "\n",
     "\n",
     "    ### 2.2 Render result        \n",
-    "    out = aligner_t2s.stitchTiles(fn_out, (50,512,512))        "
+    "    aligner_t2s.stitchTiles(fn_out, (50,512,512))"
    ]
   },
   {
@@ -323,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "9a5fb41b-9f8d-40a9-ac33-bb7cb9f8df16",
    "metadata": {},
    "outputs": [
@@ -331,9 +348,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "original size:  [ 482 9820 5969] (downsampled): [ 483 9821 5970]\n",
-      "1\n"
+      "original size:  [ 482 9820 5969] (downsampled): [ 483 9821 5970]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"\\ndef worker(tile_id):\\n    if not os.path.exists(fn_out%(ratio_high[0], tile_id) + '.h5'):\\n        print('working on tile', tile_id)\\n        aligner_t2s.alignTiles(tile_id, fn_out)\\n\\npool = mp.Pool(min(tiles_data.tiles_num, mp.cpu_count()))\\npool.map(worker, range(tiles_data.tiles_num))\\n\\n\""
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -347,7 +373,7 @@
     "\"\"\"\"\"\"\n",
     "# naive sequential approach\n",
     "for tile_id in range(tiles_data.tiles_num):    \n",
-    "    if not os.path.exists(fn_out%(ratio_high[0], tile_id) + '.h5'):\n",
+    "    if not os.path.exists(fn_out%(ratio_high[0], tile_id) + '.h5') and not os.path.exists(fn_out%(ratio_high[0], tile_id) + '_err.h5'):\n",
     "        print(tile_id)\n",
     "        aligner_t2s.alignTiles(tile_id, fn_out)\n",
     "\n",
@@ -370,9 +396,19 @@
    "execution_count": null,
    "id": "f31924d9-e635-479d-a0b2-b41d071af19c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Load tile 0:  pos= [ 163    0 1805]\n",
+      "Load tile 1:  pos= [ 107 1735 1801]\n",
+      "Load tile 2:  pos= [  94 1732    0]\n"
+     ]
+    }
+   ],
    "source": [
-    "out = aligner_t2s.stitchTiles(fn_out, (50,512,512))"
+    "out = aligner_t2s.stitchTiles(fn_out, (100,1024,1024))"
    ]
   }
  ],
