radd sheet_name for eadxlsxx

--- a/notebook/align_tile-stitched.ipynb
+++ b/notebook/align_tile-stitched.ipynb
@@ -30,60 +30,87 @@
     "import matplotlib.pyplot as plt\n",
     "import tifffile\n",
     "import multiprocessing as mp\n",
-    "from exm.io import readXlsx, readNd2,tiles, readH5, writeH5, mkdir, tilesData,imAdjust\n",
+    "from exm.io import readXlsx, readNd2,tiles, readH5, writeH5, mkdir, tilesData,imAdjust,tiff2H5\n",
     "from exm.align import sitkTile, sitkTile2Volume\n",
     "\n",
     "\n",
     "############# To change #############\n",
-    "## output files\n",
+    "## 1. File paths\n",
+    "# input\n",
+    "D0 = '/mp/nas3/WORMSeq7_Full3Rounds/WORMseq7_YoungAdult/'\n",
+    "Ds = D0 + 'WORMseq7_YoungAdult_barcode3/Base3/output/'\n",
+    "# output\n",
     "Do = '/home/donglai/align/db/wormseq7/'\n",
     "\n",
-    "## input stitched volume\n",
-    "D0 = '/mp/nas3/WORMSeq7_Full3Rounds/WORMseq7_YoungAdult/'\n",
-    "align_method = 'terastitcher' # or bigstitcher\n",
-    "Ds = D0 + 'WORMseq7_YoungAdult_barcode3/Base3/output/'\n",
-    "# if bigstitcher\n",
-    "# fn_stitched = Ds + 'Stitched.h5'\n",
-    "# or terastitcher\n",
-    "# mip0: need to be h5\n",
-    "#fn_stitched_mip0 = Ds + 'RES(9854x5950x548)/000000/000000_000000/000000_000000_000040.tif'\n",
-    "fn_stitched_mip0 = Do + 'barcode3_hr.h5'\n",
-    "fn_stitched_mip2 = Do + 'barcode3_mip2.h5'\n",
-    "fn_stitched_lr = Ds + 'RES(1231x743x68)/000000/000000_000000/000000_000000_000040.tif'\n",
     "\n",
-    "## input tiles\n",
-    "fn_name = 'barcode5'\n",
-    "fn_tiles = D0 + 'WORMseq7_YoungAdult_%s/' % fn_name\n",
-    "fn_tiles_nd2 = fn_tiles + 'Channel405 SD_Seq0004.nd2' \n",
+    "## 2. Stitched volume: convert tif output to h5\n",
+    "#align_method = 'bigstitcher'\n",
+    "align_method = 'terastitcher'\n",
+    "bigstitcher_h5 = Do + 'barcode3_hr.h5'\n",
+    "# if no h5 yet, need conversion\n",
+    "terastitcher_hr_tif = Ds + 'RES(9854x5950x548)/000000/000000_000000/000000_000000_000040.tif'\n",
+    "terastitcher_lr_tif = Ds + 'RES(1231x743x68)/000000/000000_000000/000000_000000_000040.tif'\n",
+    "\n",
+    "\n",
+    "\n",
+    "## 3. Tiles from other rounds\n",
+    "#fn_name = 'barcode5'\n",
+    "fn_name = 'barcode6'\n",
+    "fn_tiles_folder = D0 + 'WORMseq7_YoungAdult_%s/' % fn_name\n",
+    "fn_tiles_nd2 = fn_tiles_folder + 'Channel405 SD_Seq0004.nd2' \n",
     "fn_tiles_channel = '405 SD'\n",
-    "fn_tiles_xlsx = fn_tiles + 'YoungAdult_%s_405.xlsx' % fn_name\n",
+    "fn_tiles_xlsx = fn_tiles_folder + 'YoungAdult_%s_405.xlsx' % fn_name\n",
     "\n",
     "\n",
-    "## low-res registration\n",
+    "## 4. Registration\n",
     "# threshold the range to change from uint16 to uint8\n",
     "# do not rescale the tiles as some background tiles can be over-scaled\n",
-    "ratio_tiles_lr = [8,8,8]\n",
-    "ratio_stitched_lr = '3'\n",
-    "im_thres = [0, 255, False] \n",
-    "#transform_type = 'affine'\n",
     "transform_type = 'rigid' # good enough, more robust\n",
+    "#transform_type = 'affine'\n",
+    "mip_lr = 3 # for low-res registration\n",
+    "im_thres = [0, 255, False] \n",
+    "\n",
+    "do_debug = True # for debug\n",
     "\n",
     "\n",
     "############# No change #############\n",
-    "do_debug = True # for debug\n",
+    "ratio_lr = [2**mip_lr for i in range(3)]\n",
+    "stitched_hr_h5 = Do + 'barcode3_hr.h5'\n",
+    "stitched_lr_h5 = Do + 'barcode3_lr.h5'\n",
     "Do = Do + '/'\n",
     "mkdir(Do)\n",
     "mkdir(Do + fn_name)\n",
     "fn_out = Do + fn_name + '/'+ transform_type + '_%d-%d'\n",
     "\n",
     "# save intermediate low-res results\n",
-    "if do_debug:\n",
-    "    mkdir(Do + 'lr/')\n",
-    "    \n",
-    "sn_stitched_lr = Do + 'lr/stitched_lr.h5'\n",
-    "sn_tiles_lr = Do + 'lr/%s_lr.h5' % fn_name\n",
-    "sn_transform_lr = Do + 'lr/%s_lr_%s.txt' % (fn_name, transform_type)\n",
-    "sn_tiles_warp_lr = Do + 'lr/%s_lr_%s_warped.h5' % (fn_name, transform_type)"
+    "mkdir(Do + 'lr/')\n",
+    "sn_tiles_lr = Do + 'lr/%s_lr-raw.h5' % fn_name\n",
+    "sn_transform_lr = Do + 'lr/%s_lr-raw_%s.txt' % (fn_name, transform_type)\n",
+    "sn_tiles_warp_lr = Do + 'lr/%s_lr-raw_%s_warped.h5' % (fn_name, transform_type)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b11a4a35-f836-4990-a870-17c0d66fc2b0",
+   "metadata": {},
+   "source": [
+    "# Step 0. Data conversion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "edf58c45-095d-466e-b558-a049fedb1550",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not os.path.exists(stitched_hr_h5):\n",
+    "    tiff2H5(terastitcher_hr_tif, stitched_hr_h5, chunk_size=(100,1024,1024), step=100)\n",
+    "\n",
+    "if align_method == 'bigstitcher':\n",
+    "    stitched_hr_h5_vol = h5py.File(stitched_hr_h5, 'r')['t00000']['s00']['0']['cells']\n",
+    "elif align_method == 'terastitcher':\n",
+    "    stitched_hr_h5_vol = h5py.File(stitched_hr_h5, 'r')['main']"
    ]
   },
   {
@@ -104,49 +131,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "aff229e3-7576-48f9-a382-eeca5688ad17",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# stithced volume is x [1,2,2] downsampled\n",
-    "\n",
-    "# stitched resolution: stitching downsample x output scale\n",
-    "# [1,2,2] x [8,8,8]\n",
-    "# [3.2,2.6,2.6]\n",
-    "\n",
     "if align_method == 'bigstitcher':\n",
-    "    stitched_lr_h5 = h5py.File(fn_stitched, 'r')['t00000']['s00'][ratio_stitched_lr]['cells']\n",
-    "    stitched_hr_h5 = h5py.File(fn_stitched, 'r')['t00000']['s00']['0']['cells']\n",
-    "    if not os.path.exists(sn_stitched_lr):\n",
-    "        stitched_lr = imAdjust(np.array(stitched_lr_h5), [0,255,False])\n",
-    "\n",
-    "    if do_debug:    \n",
-    "        writeH5(sn_stitched_lr, stitched_lr)\n",
+    "    stitched_lr_h5_vol = np.array(h5py.File(bigstitcher_h5, 'r')['t00000']['s00'][str(mip_lr)]['cells'])    \n",
+    "elif align_method == 'terastitcher':\n",
+    "    if not os.path.exists(stitched_lr_h5):\n",
+    "        stitched_lr_vol = tifffile.imread(terastitcher_lr_tif)\n",
+    "        writeH5(stitched_lr_h5, stitched_lr_vol)\n",
     "    else:\n",
-    "        stitched_lr = readH5(sn_stitched)\n",
-    "\n",
-    "elif align_method == 'terastitcher':    \n",
-    "    stitched_hr_h5 = h5py.File(fn_stitched_mip0, 'r')['main']\n",
-    "    if not os.path.exists(sn_stitched_lr):\n",
-    "        stitched_lr = imAdjust(tifffile.imread(fn_stitched_lr), [0,255,False])\n",
-    "        writeH5(sn_stitched_lr, stitched_lr)\n",
-    "    else:\n",
-    "        stitched_lr = readH5(sn_stitched_lr)\n",
-    "    stitched_lr_h5 = h5py.File(sn_stitched_lr, 'r')['main']"
+    "        stitched_lr_vol = readH5(stitched_lr_h5)\n",
+    "    stitched_lr_h5_vol = h5py.File(stitched_lr_h5, 'r')['main']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "a638dad4-f536-487c-ad51-3d442fdc78b9",
    "metadata": {},
    "outputs": [],
    "source": [
     "if do_debug and False:\n",
     "    # check out the image value distribution\n",
-    "    test = tifffile.imread(fn_stitched_lr)\n",
-    "    plt.hist(test[test>0])\n",
+    "    stitched_lr_vol = np.array(stitched_lr_h5_vol)\n",
+    "    plt.hist(stitched_lr_vol[stitched_lr_vol>0])\n",
     "    plt.yscale('log')"
    ]
   },
@@ -160,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "2cfdfbcf-e849-4e87-9e86-f37f9f501e87",
    "metadata": {},
    "outputs": [
@@ -170,33 +181,30 @@
      "text": [
       "exist 3 multipoint loops with length [4 4 9]\n",
       "['405 SD']\n",
-      "original size:  [ 482 9820 5969] (downsampled): [  61 1228  747]\n"
+      "original size:  [ 430 9819 5969] (downsampled): [  54 1228  747]\n"
      ]
     }
    ],
    "source": [
-    "tiles_vol, tiles_info = readNd2(fn_tiles_nd2)\n",
+    "tiles_nd2, tiles_info = readNd2(fn_tiles_nd2)\n",
     "tiles_loc = readXlsx(fn_tiles_xlsx)\n",
     "\n",
     "\n",
-    "tiles_data = tilesData(tiles_vol, tiles_info, tiles_loc)\n",
+    "tiles_data = tilesData(tiles_nd2, tiles_info, tiles_loc)\n",
     "tiles_data.setChannel(fn_tiles_channel)\n",
-    "tiles_data.setRatio(ratio_tiles_lr)\n",
+    "tiles_data.setRatio(ratio_lr)\n",
     "tiles_data.setImThres(im_thres)\n",
     "\n",
     "if not os.path.exists(sn_tiles_lr):\n",
-    "    tiles_lr = tiles_data.getTileRawStitch()\n",
-    "    \n",
-    "if do_debug:\n",
-    "    if not os.path.exists(sn_tiles_lr):\n",
-    "        writeH5(sn_tiles_lr, tiles_lr)\n",
-    "    else:\n",
-    "        tiles_lr = readH5(sn_tiles_lr)"
+    "    tiles_lr_vol = tiles_data.getTileRawStitch()\n",
+    "    writeH5(sn_tiles_lr, tiles_lr_vol)\n",
+    "else:\n",
+    "    tiles_lr_vol = readH5(sn_tiles_lr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "6b6a30ea-2931-4e93-a42c-e5279ca11151",
    "metadata": {},
    "outputs": [
@@ -221,14 +229,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "ee45ff37-7c34-4215-a0f0-dcc73c298cd0",
    "metadata": {},
    "outputs": [],
    "source": [
     "if do_debug and False:\n",
     "    # check out the image value distribution\n",
-    "    plt.hist(tiles_lr[tiles_lr>0])\n",
+    "    plt.hist(tiles_lr_vol[tiles_lr_vol>0])\n",
     "    plt.yscale('log')"
    ]
   },
@@ -242,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "959ee57d-29ea-4249-b668-897f782a3059",
    "metadata": {
     "tags": []
@@ -251,31 +259,50 @@
    "source": [
     "aligner = sitkTile()\n",
     "# zyx -> xyz order\n",
-    "aligner.setResolution(tiles_data.getResolution(ratio_tiles_lr)[::-1])\n",
+    "aligner.setResolution(tiles_data.getResolution(ratio_lr)[::-1])\n",
     "aligner.setTransformType([transform_type], num_iteration=5000)\n",
     "\n",
-    "\n",
     "if not os.path.exists(sn_transform_lr):\n",
-    "    transform_lr = aligner.computeTransformMap(stitched_lr, tiles_lr,\\\n",
-    "                                    mask_fix = (stitched_lr>0).astype(np.uint8),\\\n",
-    "                                    mask_move = (tiles_lr>0).astype(np.uint8))\n",
-    "    if do_debug:\n",
-    "        aligner.writeTransformMap(sn_transform_lr, transform_lr)\n",
+    "    transform_lr = aligner.computeTransformMap(stitched_lr_vol, tiles_lr_vol,\\\n",
+    "                                mask_fix = (stitched_lr_vol>0).astype(np.uint8),\\\n",
+    "                                mask_move = (tiles_lr_vol>0).astype(np.uint8))\n",
+    "    aligner.writeTransformMap(sn_transform_lr, transform_lr)\n",
     "else:\n",
     "    transform_lr = aligner.readTransformMap(sn_transform_lr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "0d694bb3-1fdc-4175-86c8-530f35cfafef",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## debugging: visualization for napari\n",
-    "if do_debug and not os.path.exists(sn_tiles_warp_lr):\n",
-    "    tiles_lr_warp = aligner.warpVolume(tiles_lr, transform_lr).astype(np.uint8)\n",
+    "## visualization for napari\n",
+    "if not os.path.exists(sn_tiles_warp_lr):\n",
+    "    tiles_lr_warp = aligner.warpVolume(tiles_lr_vol, transform_lr).astype(np.uint8)\n",
     "    writeH5(sn_tiles_warp_lr, tiles_lr_warp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "019f84d7-0d3d-488f-97ce-2bd54b45699f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('1.300000', '1.300000', '3.200000')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transform_lr['Spacing']"
    ]
   },
   {
@@ -288,42 +315,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "212c1db4-dc39-4ca4-865e-ec48d085aaa2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "original size:  [ 482 9820 5969] (downsampled): [  61 1228  747]\n",
-      "Load tile 0:  pos= [ 21   0 226]\n",
-      "Load tile 1:  pos= [ 14 217 226]\n",
-      "Load tile 2:  pos= [ 12 217   0]\n",
-      "Load tile 3:  pos= [  5 459   0]\n",
-      "Load tile 4:  pos= [  7 459 225]\n",
-      "Load tile 6:  pos= [  1 702 466]\n",
-      "Load tile 7:  pos= [  0 702 224]\n",
-      "Load tile 8:  pos= [  0 945 467]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "do_sanity_check = False\n",
-    "do_sanity_check = True\n",
+    "#do_sanity_check = True\n",
     "\n",
     "if do_sanity_check:\n",
     "    ### 2.1 Compute registration\n",
-    "    ratio_high = [8,8,8]; tmp_h5 = stitched_lr_h5\n",
-    "    aligner_t2s = sitkTile2Volume(tiles_data, tmp_h5, aligner, ratio_high)\n",
+    "    aligner_t2s = sitkTile2Volume(tiles_data, stitched_lr_h5_vol, aligner, ratio_lr)\n",
     "    aligner_t2s.setInitialTransform(transform_lr)\n",
     "    aligner_t2s.updateOutputSize(pad_ratio = 3)\n",
     "\n",
-    "\n",
-    "    for tile_id in range(tiles_data.tiles_num):    \n",
-    "        if not os.path.exists(fn_out%(ratio_high[0], tile_id) + '.h5') and not os.path.exists(fn_out%(ratio_high[0], tile_id) + '_err.h5'):\n",
+    "    for tile_id in range(tiles_data.tiles_num):\n",
+    "        #if True:\n",
+    "        if not os.path.exists(fn_out%(ratio_lr[0], tile_id) + '.h5') and not os.path.exists(fn_out%(ratio_lr[0], tile_id) + '_err.h5'):\n",
     "            print('process tile:', tile_id)\n",
-    "            aligner_t2s.alignTiles(tile_id, fn_out)\n",
+    "            aligner_t2s.alignTiles(tile_id, fn_out, True)\n",
     "\n",
     "\n",
     "    ### 2.2 Render result        \n",
@@ -340,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "9a5fb41b-9f8d-40a9-ac33-bb7cb9f8df16",
    "metadata": {},
    "outputs": [
@@ -348,47 +358,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "original size:  [ 482 9820 5969] (downsampled): [ 483 9821 5970]\n"
+      "original size:  [ 430 9819 5969] (downsampled): [ 431 9820 5970]\n",
+      "0\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "\"\\ndef worker(tile_id):\\n    if not os.path.exists(fn_out%(ratio_high[0], tile_id) + '.h5'):\\n        print('working on tile', tile_id)\\n        aligner_t2s.alignTiles(tile_id, fn_out)\\n\\npool = mp.Pool(min(tiles_data.tiles_num, mp.cpu_count()))\\npool.map(worker, range(tiles_data.tiles_num))\\n\\n\""
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "ratio_high = [1,1,1]; tmp_h5 = stitched_hr_h5\n",
-    "\n",
-    "aligner_t2s = sitkTile2Volume(tiles_data, tmp_h5, aligner, ratio_high)\n",
+    "ratio_hr = [1,1,1]\n",
+    "aligner_t2s = sitkTile2Volume(tiles_data, stitched_hr_h5_vol, aligner, ratio_hr)\n",
     "aligner_t2s.setInitialTransform(transform_lr)\n",
     "aligner_t2s.updateOutputSize(pad_ratio = 3)\n",
     "\n",
     "\n",
-    "\"\"\"\"\"\"\n",
     "# naive sequential approach\n",
     "for tile_id in range(tiles_data.tiles_num):    \n",
-    "    if not os.path.exists(fn_out%(ratio_high[0], tile_id) + '.h5') and not os.path.exists(fn_out%(ratio_high[0], tile_id) + '_err.h5'):\n",
+    "    if not os.path.exists(fn_out%(ratio_hr[0], tile_id) + '.h5') and \\\n",
+    "        not os.path.exists(fn_out%(ratio_hr[0], tile_id) + '_err.h5'):\n",
     "        print(tile_id)\n",
     "        aligner_t2s.alignTiles(tile_id, fn_out)\n",
-    "\n",
-    "\n",
-    "\n",
     "\"\"\"\n",
+    "\n",
+    "## doesn't work due to nd2 doesn't support concurrent read\n",
     "def worker(tile_id):\n",
-    "    if not os.path.exists(fn_out%(ratio_high[0], tile_id) + '.h5'):\n",
+    "    if not os.path.exists(fn_out%(ratio_hr[0], tile_id) + '.h5'):\n",
     "        print('working on tile', tile_id)\n",
     "        aligner_t2s.alignTiles(tile_id, fn_out)\n",
     "\n",
     "pool = mp.Pool(min(tiles_data.tiles_num, mp.cpu_count()))\n",
     "pool.map(worker, range(tiles_data.tiles_num))\n",
-    "\n",
-    "\"\"\"\n"
+    "\"\"\""
    ]
   },
   {
@@ -396,19 +394,23 @@
    "execution_count": null,
    "id": "f31924d9-e635-479d-a0b2-b41d071af19c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Load tile 0:  pos= [ 163    0 1805]\n",
-      "Load tile 1:  pos= [ 107 1735 1801]\n",
-      "Load tile 2:  pos= [  94 1732    0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# render mip0 results\n",
     "out = aligner_t2s.stitchTiles(fn_out, (100,1024,1024))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "795624f1-da37-4450-9239-8c72441a45dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# downsample for visual debugging\n",
+    "fi = fn_out[:fn_out.rfind('/')] + '_stitched-%d.h5'%(ratio_high[0])\n",
+    "vol = readH5(fi)\n",
+    "writeH5(fi[:-3]+'_dsx8.h5', vol[::8,::8,::8])"
    ]
   }
  ],
