added otsu and dilation to sitk_tile.py

--- a/notebook/align_tile-stitched.ipynb
+++ b/notebook/align_tile-stitched.ipynb
@@ -414,9 +414,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "exm",
+   "display_name": "exm-toolbox",
    "language": "python",
-   "name": "exm"
+   "name": "exm-toolbox"
   },
   "language_info": {
    "codemirror_mode": {
