--- a/notebook/jack_example/example.ipynb
+++ b/notebook/jack_example/example.ipynb
@@ -40911,7 +40911,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -40927,7 +40927,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "7031bf74ef8060029f2486a878d7856847c2a18178e930a4468960deb248fb91"
@@ -40935,5 +40934,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
